--- a/src/contacts/Contacts.module.css
+++ b/src/contacts/Contacts.module.css
@@ -27,7 +27,7 @@
 }
 
 .form {
-    width: 280px;
+    width:50%;
     background-color: #2c2929;
     display: flex;
     flex-direction: column;
@@ -49,4 +49,15 @@
     margin-top: 20px;
     display: flex;
 
+}
+@media screen and (max-width:  760px){
+    .form  {
+        width:70%;
+    }
+}
+
+@media screen and (max-width:  560px){
+    .form  {
+        width:100%;
+    }
 }
