--- a/src/projects/projects.module.scss
+++ b/src/projects/projects.module.scss
@@ -1,28 +1,24 @@
+@import "../Common/styles/sass/variables";
+
 
 .projectsBlock {
-    /*min-height: 100vh;*/
-
-    background-color: #1f1f20;
-   padding: 100px 0;
-}
-
-.projectsContainer {
+  /*min-height: 100vh;*/
+  background-color: $bgColor;
+  padding: 100px 0;
+  .projectsContainer {
     flex-direction: column;
     justify-content: flex-start;
     flex-wrap: nowrap;
-}
-
-.projects {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    margin-top: 30px;
-    align-items: flex-start;
-}
-
-@media screen and (max-width: 1129px) {
     .projects {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      margin-top: 30px;
+      align-items: flex-start;
+      @media screen and (max-width: 1129px) {
         justify-content: center;
+      }
     }
+  }
 }
